[package]
name = "keter-media-model"
version = "0.1.0"
authors = ["LonelyKeter <48608259+LonelyKeter@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
chrono = { versioon = "0.4", features = ["serde"] }