[package]
name = "keter-media-model"
version = "0.1.0"
authors = ["LonelyKeter <48608259+LonelyKeter@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "postgres_query"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
postgres_query = { version = "0.3", optional = true}