[package]
name = "keter-media-model"
version = "0.1.0"
authors = ["LonelyKeter <48608259+LonelyKeter@users.noreply.github.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0.126", features = ["derive"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
postgres_query = { path = "../postgres-query/postgres_query", optional = true }
postgres-types = { version = "0.2.0", features = ["derive"], optional = true}
rust_decimal = { version = "1.15.0", features = ["db-tokio-postgres", "serde-float"] }
tokio-postgres = { version = "0.7.2", optional = true }

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros"] }
futures = { version = "0.3.17", features = ["executor"] }
rust_decimal_macros = "1.15"

[features]
default = ["serde", "postgres"]
postgres = ["postgres_query", "postgres-types", "tokio-postgres"]